# spark-log-analyser

./: .gitignore  LICENSE  Makefile  README.md  env.toml  pyproject.toml
docs/: create-mock-logs.md
setup/: app_log_filters.toml  dotenv-from-toml.py  requirements.txt
src/app/: Analytics.py  Helper.py  Logger.py  Presentation.py  __main__.py  config.py
tests/scripts/: Broker.py  create-http-logs.py  create-mocked-logs.py  publish-app-logs-to-broker.py  publish-http-logs-to-broker.py  publish-logs-to-broker.py  test-broker-published.py
